Added status endpoint, prevented creating phrases with badformed urls,  monkey patch regenerate driver, added keymetrics statistics, updated pm2
Change-Id: I73d10c4e7d6bdca9a0df29fb71d74761b71303cf

--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,7 +1,6 @@
-<% include header %>
+<% layout('layout') -%>
 
   <%- message %>
   <%- error.status %>
   <%- error.stack %>
   
-<% include footer %>
