--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -9,4 +9,8 @@
     <script src="http://localhost:35729/livereload.js"></script>
   <% } %>
 </head>
-<body>
+  <body>
+    <%- body %>
+    <% include footer %>
+  </body>
+</html>
