--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,30 @@ body {
 a {
   color: #00B7FF;
 }
+
+.version {
+  border-radius: 10px;
+  padding: 10px;
+  width: 100px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: white;
+  background: rgb(80, 80, 160);
+  text-align: center;
+}
+
+.status{
+  margin-bottom: 20px;
+}
+
+.ok{
+  background: green; 
+  padding: 20px; 
+  color : white;
+}
+
+.fail{
+  background: red; 
+  padding: 20px; 
+  color: white;
+}
