--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,6 @@
-<% include header %>
-
+<% layout('layout') -%>
   <h1><%-title %></h1>
   <p>Welcome to <%-title %></p>
 
-<% include footer %>
+  <div class="version">Version - <%- version %></div>
+
