added composr logo, updated part of the readme
Change-Id: I86642d16bf67cfc655d53206ac0a10c52184b121

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -10,6 +10,9 @@
   <% } %>
 </head>
   <body>
+    <div class="header">
+      <img class="logo" src="/img/composr.png">
+    </div>
     <%- body %>
     <% include footer %>
   </body>
