added new statuses endpoint for better parsing
Change-Id: I52b770c519c8c3bb489d74a3eb6571a3b3d1a3c2

--- a/src/views/status.ejs
+++ b/src/views/status.ejs
@@ -3,11 +3,11 @@
   
   <div class="version">Version - <%- version %></div>
 
-  <% statuses.forEach(function(status){ %>
+  <% Object.keys(statuses).forEach(function(status){ %>
     <div class="status">
-      <h3><%- status.title %>:</h3>
-      <% if(status.ok === true) { %>
-        <div class="ok">OK</div>
+      <h3><%- status %>:</h3>
+      <% if(statuses[status]) { %>
+        <div class="ok"><%- statuses[status]%></div>
       <% } else { %>
         <div class="fail">Not loaded correctly</div>
       <% }%>
